2009-09-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	  Handled file i/o error in project DOM service.

2009-09-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  Include new configurations to the configurations list, so it
	  can be found later on.

2009-09-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: Corrected GetMemberAt
	  (field lookup).

2009-09-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProjectConfiguration.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MergeToProjectAttribute.cs:
	  Support loading AssemblyKeyFile from global properties.

2009-09-29  Lluis Sanchez Gual  <lluis@novell.com>

	* md1format.xml:
	* MonoDevelop.Projects/ProjectConfiguration.cs:
	* MonoDevelop.Projects/DotNetProjectConfiguration.cs: Moved
	  SignAssembly and AssemblyKeyFile to
	  DotNetProjectConfiguration. Use the new MergeToProject flags
	  for them.

	* MonoDevelop.Projects/Solution.cs: Set correct default value
	  for the version property.

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MergeToProjectAttribute.cs:
	  Added support for MergeToProjectAttribute. When applied to a
	  property of a project configuration, MD will check if the
	  value of that property is the same for all configurations.
	  If they are the same, the value will be stored in the main
	  property group, insted of individually in each
	  configuration.

	* Makefile.am:
	* MonoDevelop.Projects.csproj: Added MergeToProjectAttribute.

2009-09-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetAssemblyProject.cs: Add missing
	  file.

2009-09-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* md1format.xml:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.addin.xml:
	* MonoDevelop.Projects/DotNetProject.cs: