@@ -1,3 +1,9 @@
+2009-10-01  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects/ProjectReference.cs:
+	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
+	  GetReferencedFileNames now go through required packages.
+
 2009-09-29  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
